--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <font style="top:30px;" class="checkbox">Check to join mailing list <input type="checkbox" name="mailing list"></font><br>
+          <font style="top:30px;" class="checkbox">Join our mailing list <input type="checkbox" name="mailing list"></font><br>
           <br><br>
         </div>
       </div>
@@ -660,10 +660,10 @@
         <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
+              <a data-toggle="modal" href="#privacy">Privacy Policy</a>
             </li>
             <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
+              <a data-toggle="modal" href="#terms">Terms of Use</a>
             </li>
           </ul>
         </div>
@@ -1520,6 +1520,168 @@
                 <a class="arxiv" href="https://therbootcamp.github.io/appliedML_2019Jan/">January 2019 | 2-day</a><br>
 
                 <br><br>
+
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--
+  TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS
+  TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS
+  TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS
+  TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS
+  -->
+
+
+  <!-- TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS TERMS -->
+  <div class="portfolio-modal modal fade" id="terms" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+
+                <!-- Project Details Go Here -->
+                <h2 class="text-uppercase">Terms of Use</h2>
+                <br>
+                <p class="text-muted" align="center">13 June 2019</p>
+                <p class="head">Agreement to terms</p>
+                <p class="text-muted entry">You agree that by accessing the Site. you have read, understood, and agreed to be bound by all of these Terms of Use. Supplementary terms and conditions or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. You will be deemed to have been made aware of and have accepted the changes in any revised Terms of Use by your continued use of the Site.</p>
+
+                <p class="head">License</p>
+                <p class="text-muted entry">
+                Unless otherwise indicated, the Site and its contents are licensed under the Creative <a href="http://creativecommons.org/licenses/by/4.0/">Commons Attribution 4.0</a> licensing terms. If you are interested in using content on this size, please take a moment to read the full <a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0</a> licensing terms.
+
+                  <p align="center">
+                    <a href="http://creativecommons.org/licenses/by/4.0/">
+                      <img src="img/cc/cc.png">
+                      <img src="img/cc/by.png">
+                      <img src="img/cc/sa.png">
+                    </a>
+                  </p>
+                </p>
+
+                <p class="head">Third-party content</p>
+                <p class="text-muted entry">
+                The site may contain links to other websites and conent belonging to third parties. Such websites and content are not investigated by us and we are not responsible for any third-party websites or content accessed through the Site.
+                </p>
+
+                <p class="head">Term and termination</p>
+                <p class="text-muted entry">
+                  These Terms of Use shall remain in full force and effect while you use the Site.
+                </p>
+
+                <p class="head">Modifications</p>
+                <p class="text-muted entry">
+                We reserve the right to change, modify, or remove the contents of the Site at any time or for any reason at our sole discretion without notice. However, we have no obligation to update any information on our Site. We also reserve the right to modify or discontinue all or part of the Site without notice at any time.
+                </p>
+
+                <p class="head">Contact us</p>
+                <p class="text-muted entry">
+                In order to resolve complaint regarding the Site or to receive further information regarding use of the site, please contuct us at:
+                <br><br>
+                <b>
+                The R Bootcamp<br>
+                Faculty of Psychology<br>
+                Missionstrasse 64A<br>
+                CH-4055 Basel<br>
+                <a href="https://therbootcamp.github.io/#contact">Mail</a>
+                </b>
+                </p>
+
+                  <br><br>
+
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- PRIVACY PRIVACY PRIVACY PRIVACY PRIVACY PRIVACY PRIVACY PRIVACY -->
+  <div class="portfolio-modal modal fade" id="privacy" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+
+                <!-- Project Details Go Here -->
+                <h2 class="text-uppercase">Privacy</h2>
+                <br>
+                <p class="text-muted" align="center">13 June 2019</p>
+
+                <p class="text-muted entry">This page informs you of our policies regarding the collection, use and disclosure of Personal Information we receive from users of the Site. We use your Personal Information only for providing and improving the Site. By using the Site, you agree to the collection and use of information in accordance with this policy.</p>
+
+                <p class="head">Information collection and use</p>
+                <p class="text-muted entry">
+                  While using our Site, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you. Personally identifiable information may include, but is not limited to your name.
+                </p>
+
+                <p class="head">Log data</p>
+                <p class="text-muted entry">
+                  Like many site operators, we collect information that your browser sends whenever you visit our Site.  This Log Data may include information such as your computer's Internet Protocol address, browser type, browser version, the pages of our Site that you visit, the time and date of your visit, the time spent on those pages and other statistics. In addition, we may use third party services such as Google Analytics that collect, monitor and analyze this data.
+                </p>
+
+                <p class="head">Communications</p>
+                <p class="text-muted entry">
+                  We may use your Personal Information to contact you with newsletters, marketing or promotional materials and other information pertaining to our training and consultinig services.
+                </p>
+
+                <p class="head">Cookies</p>
+                <p class="text-muted entry">
+                  Cookies are files with small amount of data, which may include an anonymous unique identifier. Cookies are sent to your browser from a web site and stored on your computer's hard drive. Like many sites, we use "cookies" to collect information. You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Site.
+                </p>
+
+                <p class="head">Securities</p>
+                <p class="text-muted entry">
+                  The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.
+                </p>
+
+                <p class="head">Changes to this privacy policy</p>
+                <p class="text-muted entry">
+                  This Privacy Policy is effective and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect immediately after being posted on this page.
+
+                  We reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service after we post any modifications to the Privacy Policy on this page will constitute your acknowledgment of the modifications and your consent to abide and be bound by the modified Privacy Policy.
+                </p>
+
+                <p class="head">Contact us</p>
+                <p class="text-muted entry">
+                In order to resolve complaint regarding the Site or to receive further information regarding use of the site, please contact us at:
+                <br><br>
+                <b>
+                The R Bootcamp<br>
+                Faculty of Psychology<br>
+                Missionstrasse 64A<br>
+                CH-4055 Basel<br>
+                <a href="https://therbootcamp.github.io/#contact">Mail</a>
+                </b>
+                </p>
+
+                  <br><br>
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
