--- a/index.html
+++ b/index.html
@@ -1598,7 +1598,7 @@
                 Faculty of Psychology<br>
                 Missionstrasse 64A<br>
                 CH-4055 Basel<br>
-                <a href="https://therbootcamp.github.io/#contact">Mail</a>
+                <a data-dismiss="modal" href="contact">Mail</a>
                 </b>
                 </p>
 
@@ -1677,7 +1677,7 @@
                 Faculty of Psychology<br>
                 Missionstrasse 64A<br>
                 CH-4055 Basel<br>
-                <a href="https://therbootcamp.github.io/#contact">Mail</a>
+                <a data-dismiss="modal" href="contact">Mail</a>
                 </b>
                 </p>
 
