--- a/index.html
+++ b/index.html
@@ -641,17 +641,17 @@
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://twitter.com/therbootcamp">
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
+              <a href="https://github.com/therbootcamp">
+                <i class="fab fa-github"></i>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/company/27090302">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </li>
@@ -1598,7 +1598,7 @@
                 Faculty of Psychology<br>
                 Missionstrasse 64A<br>
                 CH-4055 Basel<br>
-                <a href="#contact">Mail</a>
+                <a data-dismiss="modal" href="#contact">Mail</a>
                 </b>
                 </p>
 
