--- a/index.html
+++ b/index.html
@@ -253,7 +253,9 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/courses/1.png" alt="">
+                <a data-toggle="modal" href="#R4DS">
+                  <img class="rounded-circle img-fluid" src="img/courses/1.png" alt="">
+                </a>
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -277,7 +279,9 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/courses/2.png" alt="">
+                <a data-toggle="modal" href="#SwR">
+                  <img class="rounded-circle img-fluid" src="img/courses/2.png" alt="">
+                </a>
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -301,7 +305,9 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/courses/3.png" alt="">
+                <a data-toggle="modal" href="#MLwR">
+                  <img class="rounded-circle img-fluid" src="img/courses/3.png" alt="">
+                </a>
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
