--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Learn how to build predictive models using machine learning and R. After the course, you will understand the basics of machine learning and know how to apply various algorithms tot solve typical regression and classification problems. </p>
+                  <p class="text-muted">Learn how to build predictive models using machine learning and R. After the course, you will understand the basics of machine learning and know how to apply various algorithms to solve common decision and forecasting problems. </p>
                   </a>
                 </div>
                 <div class="timeline-dates">
