--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <i class="fas fa-plus fa-2x"></i>
                   </div>
                 </div>
-                <div class="mats" style="margin-top:-7px; > <!--- text-shadow: 0px 0px 20px #82E5BF"--->
+                <div class="mats" id="pastmats" style="margin-top:-7px; > <!--- text-shadow: 0px 0px 20px #82E5BF"--->
                   See our<br>past<br>materials!
                 </div>
                 </a>
