--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 </div>
               </div>
             </li>
-            <li class="timeline-inverted"  id="materials">
+            <li class="timeline-inverted" style="padding-top:50px" id="materials">
               <div class="timeline-image">
                 <a class="material-link" data-toggle="modal" href="#arxiv" style="text-decoration:none">
                 <div class="material-hover material-size">
