--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <h3 class="section-subheading text-muted" style="margin:10px;font-size:1.5em"><i>For everyone!</i></h3>
           <h3 class="section-subheading text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Feel to contact us, if you have questions, and explore our open materials.</h3>
           --->
-          <p class="text-muted" style="margin:0px;font-size:1.5em">For everyone!</i></p>
+          <p class="text-muted" style="margin:0px;font-size:1.5em">For professionals and academics!</i></p>
           <p class="text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Please contact us, if you have questions, and explore our open materials.</p><br><br><br>
 
         </div>
@@ -261,7 +261,8 @@
                 </div>
                 </a>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a> <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the R Bootcamp 'R for Data Science' on November 9/10.">Nov 9/10 | Preregister</a>
+                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Preregister</a>
                 </div>
               </div>
             </li>
@@ -287,7 +288,8 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>
+                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>--->
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'Statistics with R'.">tba | Preregister</a>
                 </div>
               </div>
             </li>
