--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Learn Data Science with R</div>
-        <div class="intro-heading text-uppercase" style='margin-bottom:0px;'>The R Bootcamp<br><a href="https://therbootcamp.github.io/ML_2019Oct/"><font style="font-size:40%;line-height:50px;color:#EA4B68;vertical-align: text-top;text-transform: lowercase;">...running...</font></a></div>
+        <div class="intro-heading text-uppercase">The R Bootcamp</div>
+        <!---<div class="intro-heading text-uppercase" style='margin-bottom:0px;'>The R Bootcamp<br><a href="https://therbootcamp.github.io/ML_2019Oct/"><font style="font-size:40%;line-height:50px;color:#EA4B68;vertical-align: text-top;text-transform: lowercase;">...running...</font></a></div>--->
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Learn more</a>
       </div>
     </div>
