--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Wir Lehren R</a>
+            <a class="nav-link js-scroll-trigger" href="#services">We Teach R</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#insights">Insights</a>
@@ -111,7 +111,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Wir lehren R</h2>
+          <h2 class="section-heading text-uppercase">We Teach R</h2>
           <!---<h3 class="section-subheading text-muted">We are Switzerland-based data scientists who have jointly spent over 25 years doing data science with R for both research and industry. Our goal is to help you learn the skills needed to discover and communicate insights from data and join the data revolution.</h3>--->
           <p class="text-muted">Wir sind Data Scientists, die zusammengenommen über 25 Jahre Erfahrung mit Data Science mit R in der Wissenschaft und in der Industrie gesammelt haben. Unser Ziel ist es, Ihnen die nötigen Fähigkeiten beizubringen, damit Sie Erkenntnisse aus Daten gewinnen und kommunizieren zu können.</p><br><br>
         </div>
