--- a/index.html
+++ b/index.html
@@ -174,6 +174,35 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
+                <a data-toggle="modal" href="#I2R">
+                  <img class="rounded-circle img-fluid" src="img/courses/0.png" alt="">
+                </a>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Data mining mit R</h4>
+                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
+                </div>
+                <div class="timeline-body">
+                  <a class="course-link" data-toggle="modal" href="#R4DS">
+                  <div class="course-hover">
+                    <div class="course-hover-content">
+                      <i class="fas fa-plus fa-3x"></i>
+                    </div>
+                  </div>
+                  <p class="text-muted">
+                    Lernen Sie Data Science von Grund auf. Nach dem Kurs können Sie Daten aus verschiedensten externen Dateien in R einlesen, die Daten aufbereiten, organisieren, explorieren, einfache statistische Analysen rechnen, sowie beeindruckende Visualisierungen erstellen.
+                </p>
+                </div>
+                </a>
+                <div class="timeline-dates">
+                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Preregister</a>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
                 <a data-toggle="modal" href="#R4DS">
                   <img class="rounded-circle img-fluid" src="img/courses/1.png" alt="">
                 </a>
