--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Data mining mit R</h4>
+                  <h4>Einfürung in die moderne Datenanalyse mit R</h4>
                   <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
                 </div>
                 <div class="timeline-body">
@@ -191,7 +191,36 @@
                     </div>
                   </div>
                   <p class="text-muted">
-                    Lernen Sie Data Science von Grund auf. Nach dem Kurs können Sie Daten aus verschiedensten externen Dateien in R einlesen, die Daten aufbereiten, organisieren, explorieren, einfache statistische Analysen rechnen, sowie beeindruckende Visualisierungen erstellen.
+                    Daten sind das Gold des 21. Jahrhunderts. Machen Sie ihren ersten Schritt in die Welt von Data Science und Big Data mit dieser kurzen Einführung in R, die Programmiersprache für Datenanalyse.
+                </p>
+                </div>
+                </a>
+                <div class="timeline-dates">
+                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Preregister</a>
+                </div>
+              </div>
+            </li>
+            <li  class="timeline-inverted">
+              <div class="timeline-image">
+                <a data-toggle="modal" href="#R4DS">
+                  <img class="rounded-circle img-fluid" src="img/courses/1.png" alt="">
+                </a>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Explorative Datenanalyse mit R</h4>
+                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
+                </div>
+                <div class="timeline-body">
+                  <a class="course-link" data-toggle="modal" href="#R4DS">
+                  <div class="course-hover">
+                    <div class="course-hover-content">
+                      <i class="fas fa-plus fa-3x"></i>
+                    </div>
+                  </div>
+                  <p class="text-muted">
+                    Jedes datengestützte Projekt beginnt hier. Lernen Sie mit R Daten aus verschiedenen Quellen zu bereinigen und zu verknüpfen von die darin enthaltenen Zusammenhänge ansprechend zu visualisieren.
                 </p>
                 </div>
                 </a>
@@ -202,35 +231,6 @@
               </div>
             </li>
             <li>
-              <div class="timeline-image">
-                <a data-toggle="modal" href="#R4DS">
-                  <img class="rounded-circle img-fluid" src="img/courses/1.png" alt="">
-                </a>
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>Data mining mit R</h4>
-                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
-                </div>
-                <div class="timeline-body">
-                  <a class="course-link" data-toggle="modal" href="#R4DS">
-                  <div class="course-hover">
-                    <div class="course-hover-content">
-                      <i class="fas fa-plus fa-3x"></i>
-                    </div>
-                  </div>
-                  <p class="text-muted">
-                    Lernen Sie Data Science von Grund auf. Nach dem Kurs können Sie Daten aus verschiedensten externen Dateien in R einlesen, die Daten aufbereiten, organisieren, explorieren, einfache statistische Analysen rechnen, sowie beeindruckende Visualisierungen erstellen.
-                </p>
-                </div>
-                </a>
-                <div class="timeline-dates">
-                  <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Preregister</a>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
               <div class="timeline-image">
                 <a data-toggle="modal" href="#SwR">
                   <img class="rounded-circle img-fluid" src="img/courses/2.png" alt="">
@@ -239,7 +239,7 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>Statistik mit R</h4>
-                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
+                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">200CHF @ Uni Basel</p>
                 </div>
                 <div class="timeline-body">
                   <a class="course-link" data-toggle="modal" href="#SwR">
@@ -248,7 +248,7 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Lernen Sie, wie Sie mit Statistik und R robuste, umsetzbare, datenbasierte Entscheidungen treffen können. Nach dem Kurs sind Sie in der Lage, verschiedene statistische Tests und Modelle durchzuführen, deren Annahmen zu verstehen und deren Ergebnisse zu interpretieren.</p>
+                  <p class="text-muted">Die Grundlage robuster, entscheidungsrelevante Erkenntnisse ist die Statistik. Lernen Sie die Grundlagen und deren Anwendung in der Programmiersprache, die genau hierfür entwickelt wurde, R.</p>
                   </a>
                 </div>
                 <div class="timeline-dates">
@@ -257,7 +257,7 @@
                 </div>
               </div>
             </li>
-            <li>
+            <li  class="timeline-inverted">
               <div class="timeline-image">
                 <a data-toggle="modal" href="#MLwR">
                   <img class="rounded-circle img-fluid" src="img/courses/3.png" alt="">
@@ -265,7 +265,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Machine Learning mit R</h4>
+                  <h4>Machinelles Learnen mit R</h4>
                   <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
                 <div class="timeline-body">
                   <a class="course-link" data-toggle="modal" href="#MLwR">
@@ -274,7 +274,7 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Nach dem Kurs werden Sie die Grundlagen des maschinellen Lernens verstehen und wissen, wie Sie verschiedene Algorithmen anwenden können, um allgemeine Entscheidungs- und Prognoseprobleme zu lösen.</p>
+                  <p class="text-muted">Fragen Sie sich was maschinelles Lernen eigentlich ist und ob es für Sie nützlich sein könnte? Lernen Sie die Hintergründe und wie Sie mit R alle gängigen Algorithmen auf ihre Daten anwenden können.</p>
                   </a>
                 </div>
                 <div class="timeline-dates">
@@ -282,7 +282,7 @@
                 </div>
               </div>
             </li>
-            <li class="timeline-inverted" style="padding-top:50px" id="materials">
+            <li  class="timeline-inverted" style="padding-top:50px" id="materials">
               <div class="timeline-image">
                 <a class="material-link" data-toggle="modal" href="#arxiv" style="text-decoration:none">
                 <div class="material-hover material-size">
